--- a/src/WMS.Api/appsettings.Development.json
+++ b/src/WMS.Api/appsettings.Development.json
@@ -1,8 +1,40 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "AllowedHosts": "*",
+
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Console", "Serilog.Sinks.Async" ],
+    "MinimumLevel": {
+      "Default": "Debug",
+      "Override": {
+        "Microsoft": "Information"
+      }
+    },
+    "WriteTo": [
+      {
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "{Timestamp:HH:mm:ss.mmm} [{Level:u3} {ThreadId}] {Message:lj} {NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "Async",
+        "Args": {
+          "configure": [
+            {
+              "Name": "File",
+              "Args": {
+                "path": "D:/WMS/WMS-.txt",
+                "rollingInterval": "Day",
+                "outputTemplate": "{Timestamp:HH:mm:ss.mmm} [{Level:u3} {ThreadId}] {Message:lj} {NewLine}{Exception}",
+                "retainedFileCountLimit": 100,
+                "fileSizeLimitBytes": 104857600
+              }
+            }
+          ]
+        }
+      }
+    ],
+    "Enrich": [ "WithThreadId" ]
   }
+
 }
