--- a/src/WMS.Api/appsettings.json
+++ b/src/WMS.Api/appsettings.json
@@ -1,5 +1,8 @@
 {
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Mysql": "server=localhost;database=library;user=root;password=root"
+  },
 
   "Serilog": {
     "Using": [ "Serilog.Sinks.File", "Serilog.Sinks.Console", "Serilog.Sinks.Async" ],
