--- a/src/WMS.Api/appsettings.json
+++ b/src/WMS.Api/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Mysql": "server=localhost;database=library;user=root;password=root"
+    "Mysql": "server=localhost;database=WMSDB;user=root;password=root"
   },
 
   "Serilog": {
