--- a/src/WMS.MySQL.Repository/efpt.config.json
+++ b/src/WMS.MySQL.Repository/efpt.config.json
@@ -1,12 +1,12 @@
 ﻿{
-   "CodeGenerationMode": 2,
+   "CodeGenerationMode": 3,
    "ContextClassName": "auroraContext",
    "ContextNamespace": null,
    "DefaultDacpacSchema": null,
    "FilterSchemas": false,
    "IncludeConnectionString": false,
    "ModelNamespace": null,
-   "OutputContextPath": null,
+   "OutputContextPath": "..\/",
    "OutputPath": "Models",
    "PreserveCasingWithRegex": true,
    "ProjectRootNamespace": "WMS.MySQL.Repository",
@@ -15,103 +15,11 @@
    "SelectedToBeGenerated": 0,
    "Tables": [
       {
-         "Name": "t_about",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_article",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_article_tag",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_category",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_comment",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_exception_log",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_friend_link",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_job",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_job_log",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_menu",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_operation_log",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_photo",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_photo_album",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_resource",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_role",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_role_menu",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_role_resource",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_tag",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_talk",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_unique_view",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_user_auth",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_user_info",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_user_role",
-         "ObjectType": 0
-      },
-      {
-         "Name": "t_website_config",
+         "Name": "user_info",
          "ObjectType": 0
       }
    ],
-   "UiHint": "aurora",
+   "UiHint": "WMSDB",
    "UncountableWords": null,
    "UseBoolPropertiesWithoutDefaultSql": false,
    "UseDatabaseNames": false,
