--- a/src/WMS.Api/WMS.Api.csproj
+++ b/src/WMS.Api/WMS.Api.csproj
@@ -17,7 +17,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.16" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.18.1" />
     <PackageReference Include="Serilog.AspNetCore" Version="6.1.0" />
     <PackageReference Include="Serilog.Enrichers.Thread" Version="3.1.0" />
@@ -27,7 +26,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WMS.MySQL.Repository\WMS.MySQL.Repository.csproj" />
+    <Folder Include="Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\WMS.Data\WMS.Models.csproj" />
+    <ProjectReference Include="..\WMS.Services\WMS.Services.csproj" />
   </ItemGroup>
 
 </Project>
