--- a/src/WMS.Services/WMS.Services.csproj
+++ b/src/WMS.Services/WMS.Services.csproj
@@ -7,11 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.16" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WMS.Data\WMS.Data.csproj" />
+    <ProjectReference Include="..\WMS.MySQL.Repository\WMS.Repository.csproj" />
   </ItemGroup>
 
 </Project>
