--- a/src/WMS.Services/WMS.Services.csproj
+++ b/src/WMS.Services/WMS.Services.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\WMS.MySQL.Repository\WMS.Repository.csproj" />
+    <ProjectReference Include="..\WMS.Repository\WMS.Repository.csproj" />
   </ItemGroup>
 
 </Project>
