--- a/src/WMS.Repository/WMS.Repository.csproj
+++ b/src/WMS.Repository/WMS.Repository.csproj
@@ -10,4 +10,8 @@
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\RainFramework.Common\RainFramework.Common.csproj" />
+  </ItemGroup>
+
 </Project>
