--- a/src/Demo.Api/appsettings.Development.json
+++ b/src/Demo.Api/appsettings.Development.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Mysql": "server=localhost;database=WMSDB;user=root;password=root"
+    "MySql": "server=localhost;database=WMSDB;user=root;password=root"
   },
 
   "Serilog": {
