--- a/src/Demo.Api/appsettings.json
+++ b/src/Demo.Api/appsettings.json
@@ -1,4 +1,13 @@
 {
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://*:5218"
+      }
+    }
+  },
+
+
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MySql": "server=localhost;database=WMSDB;user=root;password=root"
@@ -9,7 +18,7 @@
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
-        "Microsoft": "Warning"
+        "Microsoft": "Information"
       }
     },
     "WriteTo": [
@@ -39,5 +48,4 @@
     ],
     "Enrich": [ "WithThreadId" ]
   }
-
 }
