--- a/src/Demo.Api/appsettings.Development.json
+++ b/src/Demo.Api/appsettings.Development.json
@@ -1,4 +1,14 @@
 {
+
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://*:5218"
+      }
+    }
+  },
+
+
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MySql": "server=localhost;database=WMSDB;user=root;password=root"
