add AutoMapper Profile

--- a/src/RainFramework.AspNetCore/RainFramework.AspNetCore.csproj
+++ b/src/RainFramework.AspNetCore/RainFramework.AspNetCore.csproj
@@ -16,6 +16,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\RainFramework.Repository\RainFramework.Repository.csproj" />
   </ItemGroup>
 
