fix  Menu tree Bug

--- a/src/Demo.Api/Properties/launchSettings.json
+++ b/src/Demo.Api/Properties/launchSettings.json
@@ -1,8 +1,8 @@
 {
   "profiles": {
-    "WMS.Api": {
+    "Demo.Api": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
