add Operate log

--- a/src/Demo.Api/appsettings.Development.json
+++ b/src/Demo.Api/appsettings.Development.json
@@ -7,7 +7,7 @@
       }
     }
   },
-
+  "Logging": {"LogLevel": {"AspNetCore": " "}},
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
@@ -19,7 +19,7 @@
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
-        "Microsoft": "Information"
+        "Microsoft.AspNetCore": "Warning"
       }
     },
     "WriteTo": [
