--- a/src/Demo.Api/appsettings.Development.json
+++ b/src/Demo.Api/appsettings.Development.json
@@ -7,7 +7,7 @@
       }
     }
   },
-  "Logging": {"LogLevel": {"AspNetCore": "Information"}},
+  "Logging": {"LogLevel": {"AspNetCore": "Warning"}},
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
@@ -19,7 +19,7 @@
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
-        "Microsoft.AspNetCore": "Information"
+        "Microsoft.AspNetCore": "Warning"
       }
     },
     "WriteTo": [
