--- a/src/RainFramework.Common/RainFramework.Common.csproj
+++ b/src/RainFramework.Common/RainFramework.Common.csproj
@@ -9,6 +9,7 @@
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Authors>Andy</Authors>
     <PackageReadmeFile>readme.md</PackageReadmeFile>
+    <Version>1.0.2</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
