--- a/src/Demo.Api/appsettings.json
+++ b/src/Demo.Api/appsettings.json
@@ -9,7 +9,7 @@
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySql": "server=localhost;database=WMSDB;user=root;password=root"
+    "MySql": "server=localhost;database=WMSDB;user=root;password=root;"
   },
 
   "Serilog": {
