--- a/src/Demo.Api/appsettings.json
+++ b/src/Demo.Api/appsettings.json
@@ -17,7 +17,8 @@
     "MinimumLevel": {
       "Default": "Debug",
       "Override": {
-        "Microsoft": "Information"
+        "Microsoft": "Information",
+
       }
     },
     "WriteTo": [
