--- a/src/Demo.Api/appsettings.Development.json
+++ b/src/Demo.Api/appsettings.Development.json
@@ -7,7 +7,11 @@
       }
     }
   },
-  "Logging": {"LogLevel": {"AspNetCore": "Warning"}},
+  "MemoryCache.SizeLimit": 1024,
+
+  "Mysql.Version": "8.0.33-mysql",
+
+  "Logging": { "LogLevel": { "AspNetCore": "Warning" } },
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
