--- a/src/RainFramework.Cahce/RainFramework.Cahce.csproj
+++ b/src/RainFramework.Cahce/RainFramework.Cahce.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	  <Authors>Andy</Authors>
-	  <Version>1.0.1</Version>
+	  <Version>1.0.2</Version>
 	  <Description>RF Cache</Description>
   </PropertyGroup>
 
