--- a/src/Demo.Api/Demo.Api.csproj
+++ b/src/Demo.Api/Demo.Api.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerDefaultTargetOS>Windows</DockerDefaultTargetOS>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <UserSecretsId>eaafd6aa-f95a-46c6-ae1d-dc34bcd2d12b</UserSecretsId>
   </PropertyGroup>
