--- a/src/Demo.Api/Dockerfile
+++ b/src/Demo.Api/Dockerfile
@@ -1,13 +1,17 @@
 #See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
+#Depending on the operating system of the host machines(s) that will build or run the containers, the image specified in the FROM statement may need to be changed.
+#For more information, please see https://aka.ms/containercompat
+
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
-EXPOSE 5218
+EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 COPY ["Demo.Api/Demo.Api.csproj", "Demo.Api/"]
 COPY ["RainFramework.AspNetCore/RainFramework.AspNetCore.csproj", "RainFramework.AspNetCore/"]
+COPY ["RainFramework.Cahce/RainFramework.Cahce.csproj", "RainFramework.Cahce/"]
 COPY ["RainFramework.Repository/RainFramework.Repository.csproj", "RainFramework.Repository/"]
 COPY ["RainFramework.Common/RainFramework.Common.csproj", "RainFramework.Common/"]
 RUN dotnet restore "Demo.Api/Demo.Api.csproj"
