--- a/src/RainDesktop/RainDesktop.csproj
+++ b/src/RainDesktop/RainDesktop.csproj
@@ -1,9 +1,12 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+	  <Authors>Andy</Authors>
+	  <Version>1.0.0</Version>
+	  <Description></Description>
   </PropertyGroup>
 
   <ItemGroup>
