--- a/src/Demo/Demo.csproj
+++ b/src/Demo/Demo.csproj
@@ -10,18 +10,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="Assets\Fonts1\iconfont.ttf" />
     <None Remove="Assets\iconfont.ttf" />
-    <None Remove="Assets\Icons\iconfont.ttf" />
     <None Remove="Assets\Icons\logo.ico" />
     <None Remove="Assets\Icons\logo1.ico" />
     <None Remove="Assets\Images\engineer.png" />
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Assets\Fonts\iconfont.ttf" />
     <Resource Include="Assets\Icons\logo.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Resource>
+    <Resource Include="Assets\Fonts1\iconfont.ttf" />
     <Content Include="Assets\Icons\logo1.ico">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -33,9 +33,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Resource Include="Assets\Icons\iconfont.ttf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Resource>
     <Resource Include="Assets\Icons\logo1.ico">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </Resource>
