--- a/src/RainWPF.Abstractions/RainWPF.Abstractions.csproj
+++ b/src/RainWPF.Abstractions/RainWPF.Abstractions.csproj
@@ -5,13 +5,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	  <Authors>Andy</Authors>
-	  <Version>1.0.0</Version>
+	  <Version>1.0.2</Version>
 	  <Description>RainWPF Abstractions</Description>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0" />
 	<PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+	<PackageReference Include="Stocker.Helper" Version="1.1.25" />
   </ItemGroup>
 
 </Project>
