--- a/src/RainFramework.AspNetCore/RainFramework.AspNetCore.csproj
+++ b/src/RainFramework.AspNetCore/RainFramework.AspNetCore.csproj
@@ -9,7 +9,7 @@
     <Authors>Andy</Authors>
     <Version>1.0.495</Version>
 	<Description>RF 核心</Description>
-	<PackageReadmeFile>RainFramework.Common.md</PackageReadmeFile>
+	<PackageReadmeFile></PackageReadmeFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -29,11 +29,5 @@
     <Folder Include="Properties\" />
   </ItemGroup>
 
-  <ItemGroup>
-    <None Include="bin\Debug\net6.0\RainFramework.Common.md">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
-  </ItemGroup>
 
 </Project>
