--- a/src/RainFramework.Repository/RainFramework.Repository.csproj
+++ b/src/RainFramework.Repository/RainFramework.Repository.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <Authors>Andy</Authors>
-    <Version>1.0.47</Version>
+    <Version>1.0.48</Version>
     <Description>RF 系统仓储层</Description>
   </PropertyGroup>
 
