--- a/src/RainFramework.Helper/RainFramework.Helper.csproj
+++ b/src/RainFramework.Helper/RainFramework.Helper.csproj
@@ -1,11 +1,11 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	<Authors>Andy</Authors>
-	<Version>1.0.0</Version>
+	<Version>1.0.1</Version>
 	<Description>RF Helper</Description>
   </PropertyGroup>
 
