--- a/src/Demo.Api/appsettings.Development.json
+++ b/src/Demo.Api/appsettings.Development.json
@@ -15,7 +15,7 @@
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySql": "server=localhost;database=WMSDB;user=root;password=root"
+    "MySql": "server=localhost;database=WMSDB1;user=root;password=root"
   },
 
   "Serilog": {
