--- a/src/RainFramework.EFCore/RainFramework.EFCore.Mysql.csproj
+++ b/src/RainFramework.EFCore/RainFramework.EFCore.Mysql.csproj
@@ -5,7 +5,7 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<Authors>Andy</Authors>
-		<Version>1.0.4</Version>
+		<Version>1.0.5</Version>
 		<Description>RF EFcore Mysql</Description>
 	</PropertyGroup>
 
@@ -17,5 +17,10 @@
 	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql.Json.Newtonsoft" Version="7.0.0" />
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <ProjectReference Include="..\RainFramework.Common\RainFramework.Common.csproj" />
+	  <ProjectReference Include="..\RainFramework.Model\RainFramework.Model.csproj" />
 	</ItemGroup>	
 </Project>
