--- a/src/RainFramework.Repository/RainFramework.Dao.csproj
+++ b/src/RainFramework.Repository/RainFramework.Dao.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFrameworks>net6.0;net8.0</TargetFrameworks>
@@ -6,7 +6,7 @@
     <Nullable>enable</Nullable>
     <GenerateDocumentationFile>True</GenerateDocumentationFile>
     <Authors>Andy</Authors>
-    <Version>1.0.5</Version>
+    <Version>1.0.6</Version>
     <Description>RF Dao</Description>
   </PropertyGroup>
 
