--- a/src/RainFramework.EventBus/RainFramework.Mq.csproj
+++ b/src/RainFramework.EventBus/RainFramework.Mq.csproj
@@ -1,11 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>net6.0</TargetFramework>
+		<TargetFrameworks>net6.0;net8.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<Authors>Andy</Authors>
-		<Version>1.1.25</Version>
+		<Version>1.1.26</Version>
 		<Description>RF Mq</Description>
 	</PropertyGroup>
 
