--- a/src/RainFramework.EFCore/RainFramework.EFCore.csproj
+++ b/src/RainFramework.EFCore/RainFramework.EFCore.csproj
@@ -5,20 +5,24 @@
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
 		<Authors>Andy</Authors>
-		<Version>1.0.7</Version>
+		<Version>1.0.0</Version>
 		<Description>RF EFcore Mysql</Description>
 	</PropertyGroup>
 
 	<ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
-		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
-		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql.Json.Newtonsoft" Version="8.0.2" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore">
+		  <Version>8.0.2</Version>
+		</PackageReference>
 	</ItemGroup>
-	
+
+
 	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
-		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
-		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql.Json.Newtonsoft" Version="7.0.0" />
+
+		<PackageReference Include="Microsoft.EntityFrameworkCore">
+			<Version>7.0.2</Version>
+		</PackageReference>
 	</ItemGroup>
-	
+
 	<ItemGroup>
 	  <ProjectReference Include="..\RainFramework.Common\RainFramework.Common.csproj" />
 	  <ProjectReference Include="..\RainFramework.Model\RainFramework.Model.csproj" />
