--- a/src/RainFramework.Entities.Abstractions/RainFramework.Entities.Abstractions.csproj
+++ b/src/RainFramework.Entities.Abstractions/RainFramework.Entities.Abstractions.csproj
@@ -1,10 +1,12 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFrameworks>net6.0;net8.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
 		<Authors>Andy</Authors>
-		<Version>1.0.54</Version>
+		<Version>1.0.0</Version>
+		<Description>RF Entities</Description>
 	</PropertyGroup>
 
 </Project>
