--- a/src/Demo.Api/appsettings.json
+++ b/src/Demo.Api/appsettings.json
@@ -1,11 +1,5 @@
 {
-  "Kestrel": {
-    "Endpoints": {
-      "Http": {
-        "Url": "http://*:5218"
-      }
-    }
-  },
+  "Url": "http://*:5218",
   "RFMemoryCache": {
     "SizeLimit": 1024
   },
