分离 Mysql  以更好的支持其他数据库

--- a/src/Demo.Api/appsettings.Development.json
+++ b/src/Demo.Api/appsettings.Development.json
@@ -2,7 +2,7 @@
   "Kestrel": {
     "Endpoints": {
       "Http": {
-        "Url": "http://*:5219"
+        "Url": "http://*:5218"
       }
     }
   },
@@ -14,7 +14,7 @@
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySql": "server=localhost;database=WMSDB1;user=root;password=root"
+    "MySql": "server=localhost;database=RFDemo;user=root;password=root"
   },
 
   "Serilog": {
