--- a/src/Demo.Api/Demo.Api.csproj
+++ b/src/Demo.Api/Demo.Api.csproj
@@ -34,6 +34,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RainFramework.AspNetCore\RainFramework.AspNetCore.csproj" />
+    <ProjectReference Include="..\RainFramework.Dao.PomeloMysql\RainFramework.Dao.PomeloMysql.csproj" />
     <ProjectReference Include="..\RainFramework.Helper\RainFramework.Helper.csproj" />
   </ItemGroup>
 
