--- a/src/Demo.Api/appsettings.Development.json
+++ b/src/Demo.Api/appsettings.Development.json
@@ -14,7 +14,8 @@
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MySql": "server=localhost;database=RFDemo;user=root;password=root"
+    "MySql": "server=localhost;database=RFDemo;user=root;password=root",
+    "Redis": "localhost:6379,password=123"
   },
 
   "Serilog": {
