--- a/src/Demo.Api/Demo.Api.csproj
+++ b/src/Demo.Api/Demo.Api.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <ProjectReference Include="..\RainFramework.AspNetCore\RainFramework.AspNetCore.csproj" />
     <ProjectReference Include="..\RainFramework.Dao.PomeloMysql\RainFramework.Dao.PomeloMysql.csproj" />
+    <ProjectReference Include="..\RainFramework.Helper.Redis\RainFramework.Redis.csproj" />
     <ProjectReference Include="..\RainFramework.Helper\RainFramework.Helper.csproj" />
   </ItemGroup>
 
