--- a/src/RainFramework.Helper.Redis/RainFramework.Redis.csproj
+++ b/src/RainFramework.Helper.Redis/RainFramework.Redis.csproj
@@ -4,9 +4,14 @@
 		<TargetFrameworks>net8.0;net6.0</TargetFrameworks>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<Authors>Andy</Authors>
+		<Version>1.0.0</Version>
+		<Description>RF Redis connector</Description>
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
 	  <PackageReference Include="StackExchange.Redis" Version="2.8.0" />
 	</ItemGroup>
 
